ex4/deploy/app_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  labels:
    app: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: bartlomiejdanek/app:stage_2
        command: ["ruby"]
        args: ["/app/app.rb", "k8s"]
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
