ex4/deploy/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: sample-app-service
          servicePort: 3000
